Updated server client recipe pipeline
